--- a/pkg/konfluxgen/renovate.template.json
+++ b/pkg/konfluxgen/renovate.template.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "enabledManagers": ["tekton"],
   "ignorePaths": [
     ".konflux-release/**",
     "third_party/**",
