Add atlas config

--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -55,6 +55,8 @@ spec:
     sign:
       configMapName: {{{ .SignCMName }}}
       cosignSecretName: {{{ .SignSecretName }}}
+    atlas:
+      server: {{{ .AtlasServer }}}
   pipeline:
     pipelineRef:
       resolver: git
