--- a/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
@@ -47,6 +47,8 @@ spec:
     sign:
       configMapName: {{{ .SignCMName }}}
       cosignSecretName: {{{ .SignSecretName }}}
+    atlas:
+      server: {{{ .AtlasServer }}}
   pipeline:
     pipelineRef:
       resolver: git
