--- a/.konflux/releaseplanadmissions/serverless-operator-135-1351-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1351-fbc-stage.yaml
@@ -47,6 +47,8 @@ spec:
     sign:
       configMapName: hacbs-signing-pipeline-config-staging-redhatrelease2
       cosignSecretName: konflux-cosign-signing-stage
+    atlas:
+      server: stage
   pipeline:
     pipelineRef:
       resolver: git
