--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
@@ -161,6 +161,8 @@ spec:
     sign:
       configMapName: hacbs-signing-pipeline-config-redhatrelease2
       cosignSecretName: konflux-cosign-signing-production
+    atlas:
+      server: production
   pipeline:
     pipelineRef:
       resolver: git
