--- a/.github/workflows/release-discover-branches.yaml
+++ b/.github/workflows/release-discover-branches.yaml
@@ -57,16 +57,20 @@ jobs:
           path: ./src/github.com/openshift-knative/rpm-lockfile-prototype
           ref: '283ee2cd7938a2142d8ac98de33ba0d0e3ac146f'
 
+      - name: Install podman
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install podman
+
       - name: Build rpm-lockfile-prototype
         working-directory: ./src/github.com/openshift-knative/rpm-lockfile-prototype
-        run: docker build -t localhost/rpm-lockfile-prototype:latest -f Containerfile .
+        run: podman build -t localhost/rpm-lockfile-prototype:latest -f Containerfile .
 
       - name: Update RPMs lock files
         working-directory: ./src/github.com/openshift-knative/hack
         run: |
-          container_dir=/work
-          docker run \
-            --user $(id -u):$(id -g) \
+          container_dir=~/work
+          podman run --privileged \
             --rm \
             -v ${PWD}:${container_dir} \
             localhost/rpm-lockfile-prototype:latest \
