--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -109,9 +109,7 @@ jobs:
         with:
           path: ./src/github.com/openshift-knative/hack
       - name: Setup Golang
-        uses: actions/setup-go@v5
-        with:
-          go-version-file: ./src/github.com/openshift-knative/hack/go.mod
+        uses: ./src/github.com/openshift-knative/hack/actions/setup-go
       - name: Install yq
         run: go install github.com/mikefarah/yq/v3@latest
       - name: Install skopeo
