Configure Node.js base images
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -14,6 +14,10 @@ config:
           pullSpec: registry.access.redhat.com/ubi8/openjdk-21
         - name: JAVA_RUNTIME
           pullSpec: registry.access.redhat.com/ubi8/openjdk-21-runtime
+        - name: NODE_BUILDER
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
+        - name: NODE_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
       openShiftVersions:
       - candidateRelease: true
         customConfigs:
@@ -68,6 +72,10 @@ config:
           pullSpec: registry.access.redhat.com/ubi8/openjdk-21
         - name: JAVA_RUNTIME
           pullSpec: registry.access.redhat.com/ubi8/openjdk-21-runtime
+        - name: NODE_BUILDER
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
+        - name: NODE_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
