Add eventing-integrations release-next branch config

--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -1,5 +1,13 @@
 config:
   branches:
+    release-next:
+      openShiftVersions:
+        - useClusterPool: true
+          version: "4.17"
+        - onDemand: true
+          version: "4.14"
+      skipDockerFilesMatches:
+        - .*hermetic.*
     release-v1.16:
       konflux:
         enabled: true
