--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -43,6 +43,7 @@ spec:
           - "{{ git_sha }}"
           - "{{ git_short_sha }}"
           - "{{{ .SOVersion }}}"
+          - "{{{ .SOVersion }}}-{{ timestamp }}"
     pyxis:
       secret: {{{ .PyxisSecret }}}
       server: {{{ .PyxisServer }}}
