Sync Konflux configurations for serverless operator

--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-stage.yaml
@@ -176,9 +176,10 @@ spec:
           - "{{ git_sha }}"
           - "{{ git_short_sha }}"
           - "1.36.0"
+          - "1.36.0-{{ timestamp }}"
     pyxis:
       secret: pyxis-staging-secret
-      server: stage
+      server: stage-internal
       # This causes the release pipeline to not upload layer size information
       # to pyxis which will save on runtime at the cost of data completeness in
       # pyxis. The side-effects are:
