Update rmps.in file to fix PackagesNotAvailableError error and align with https://github.com/konflux-ci/rpm-lockfile-prototype/pull/90/files

--- a/pkg/dockerfilegen/ubi8.rpms.in.yaml
+++ b/pkg/dockerfilegen/ubi8.rpms.in.yaml
@@ -12,6 +12,9 @@ packages:
 reinstallPackages:
   - tzdata
 
+upgradePackages:
+  - tzdata
+
 arches:
   # The list of architectures can be set in the config file. Any `--arch` option set
   # on the command line will override this list.
