--- a/.github/workflows/release-discover-branches.yaml
+++ b/.github/workflows/release-discover-branches.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           repository: 'konflux-ci/rpm-lockfile-prototype'
           path: ./src/github.com/openshift-knative/rpm-lockfile-prototype
-          ref: '283ee2cd7938a2142d8ac98de33ba0d0e3ac146f'
+          ref: 'v0.15.0'
 
       - name: Install podman
         run: |
