--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -13,7 +13,7 @@ spec:
   policy: {{{ .Policy }}}
   data:
     releaseNotes:
-      product_id: 579
+      product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "{{{ .SOVersion }}}"
       references:
@@ -58,6 +58,7 @@ spec:
       cosignSecretName: {{{ .SignSecretName }}}
     atlas:
       server: {{{ .AtlasServer }}}
+    intention: {{{ .Intention }}}
   pipeline:
     pipelineRef:
       resolver: git
