--- a/.konflux/releaseplanadmissions/serverless-operator-135-1351-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1351-stage.yaml
@@ -10,10 +10,10 @@ metadata:
 spec:
   applications: [serverless-operator-135]
   origin: ocp-serverless-tenant
-  policy: registry-standard-stage
+  policy: registry-ocp-serverless-stage
   data:
     releaseNotes:
-      product_id: 579
+      product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "1.35.1"
       references:
@@ -164,6 +164,7 @@ spec:
       cosignSecretName: konflux-cosign-signing-stage
     atlas:
       server: stage
+    intention: staging
   pipeline:
     pipelineRef:
       resolver: git
