--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
@@ -13,7 +13,7 @@ spec:
   policy: registry-ocp-serverless-prod
   data:
     releaseNotes:
-      product_id: 579
+      product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "1.36.0"
       references:
@@ -191,6 +191,7 @@ spec:
       cosignSecretName: konflux-cosign-signing-production
     atlas:
       server: production
+    intention: production
   pipeline:
     pipelineRef:
       resolver: git
