--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-stage.yaml
@@ -10,10 +10,10 @@ metadata:
 spec:
   applications: [serverless-operator-136]
   origin: ocp-serverless-tenant
-  policy: registry-standard-stage
+  policy: registry-ocp-serverless-stage
   data:
     releaseNotes:
-      product_id: 579
+      product_id: [579]
       product_name: "OpenShift Serverless"
       product_version: "1.36.0"
       references:
@@ -191,6 +191,7 @@ spec:
       cosignSecretName: konflux-cosign-signing-stage
     atlas:
       server: stage
+    intention: staging
   pipeline:
     pipelineRef:
       resolver: git
