--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -86,6 +86,34 @@ config:
         version: "4.14"
       prowgen:
         disabled: true
+    release-1.37:
+      konflux:
+        enabled: true
+        excludes:
+        - .*rosa.*
+        imageOverrides:
+        - name: GO_BUILDER
+          pullSpec: brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.23
+        - name: GO_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi8/ubi-minimal
+        - name: JAVA_BUILDER
+          pullSpec: registry.access.redhat.com/ubi8/openjdk-21
+        - name: JAVA_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi8/openjdk-21-runtime
+        - name: NODE_BUILDER
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
+        - name: NODE_RUNTIME
+          pullSpec: registry.access.redhat.com/ubi8/nodejs-20
+      openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        version: "4.18"
+      - useClusterPool: true
+        version: "4.17"
+      - onDemand: true
+        version: "4.14"
+      prowgen:
+        disabled: true
 repositories:
 - customConfigs:
   - name: 417-aws-ovn
