--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -2,8 +2,12 @@ config:
   branches:
     release-next:
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
@@ -24,9 +28,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
@@ -35,8 +39,12 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
