--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -2,13 +2,17 @@ config:
   branches:
     release-next:
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
     release-v1.14:
       openShiftVersions:
-      - useClusterPool: true
+      - onDemand: true
         version: "4.16"
       - onDemand: true
         version: "4.13"
@@ -17,7 +21,7 @@ config:
         enabled: true
       openShiftVersions:
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.13"
     release-v1.16:
@@ -27,9 +31,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
     release-v1.17:
@@ -39,9 +43,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
 repositories:
