--- a/config/serving-net-kourier.yaml
+++ b/config/serving-net-kourier.yaml
@@ -2,7 +2,7 @@ config:
   branches:
     release-v1.14:
       openShiftVersions:
-      - useClusterPool: true
+      - onDemand: true
         version: "4.16"
       - onDemand: true
         version: "4.13"
@@ -11,9 +11,9 @@ config:
         enabled: true
       openShiftVersions:
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
     release-v1.16:
       konflux:
         enabled: true
@@ -21,9 +21,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
     release-v1.17:
@@ -33,9 +33,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
 repositories:
