--- a/config/client.yaml
+++ b/config/client.yaml
@@ -13,6 +13,9 @@ config:
     release-v1.16:
       konflux:
         enabled: true
+        imageOverrides:
+          - name: CLI_ARTIFACTS
+            pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
