Sync Konflux configurations for serverless operator

--- a/.konflux/applications/serverless-operator-136-fbc-418/components/serverless-index-136-fbc-418.yaml
+++ b/.konflux/applications/serverless-operator-136-fbc-418/components/serverless-index-136-fbc-418.yaml
@@ -14,4 +14,4 @@ spec:
       url: https://github.com/openshift-knative/serverless-operator.git
       context: ./olm-catalog/serverless-operator-index/v4.18
       dockerfileUrl: Dockerfile
-      revision: main
+      revision: release-1.36
