--- a/.konflux/applications/serverless-operator-136/components/serverless-must-gather-136.yaml
+++ b/.konflux/applications/serverless-operator-136/components/serverless-must-gather-136.yaml
@@ -14,4 +14,4 @@ spec:
       url: https://github.com/openshift-knative/serverless-operator.git
       context: 
       dockerfileUrl: must-gather/Dockerfile
-      revision: main
+      revision: release-1.36
