--- a/.konflux/applications/serverless-operator-137-fbc-414/components/serverless-index-137-fbc-414.yaml
+++ b/.konflux/applications/serverless-operator-137-fbc-414/components/serverless-index-137-fbc-414.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     build.appstudio.openshift.io/pipeline: '{"name":"docker-build","bundle":"latest"}'
     build.appstudio.openshift.io/request: configure-pac-no-mr
-  name: serverless-ingress-136
+  name: serverless-index-137-fbc-414
 spec:
-  componentName: serverless-ingress-136
-  application: serverless-operator-136
+  componentName: serverless-index-137-fbc-414
+  application: serverless-operator-137-fbc-414
    
   source:
     git:
       url: https://github.com/openshift-knative/serverless-operator.git
-      context: 
-      dockerfileUrl: serving/ingress/Dockerfile
-      revision: release-1.36
+      context: ./olm-catalog/serverless-operator-index/v4.14
+      dockerfileUrl: Dockerfile
+      revision: main
