--- a/config/eventing-integrations.yaml
+++ b/config/eventing-integrations.yaml
@@ -58,8 +58,12 @@ config:
         - .*eventing-integrations-log-sink
         - .*eventing-integrations-timer-source
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
