--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -48,8 +48,12 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
 repositories:
