--- a/config/backstage-plugins.yaml
+++ b/config/backstage-plugins.yaml
@@ -2,16 +2,18 @@ config:
   branches:
     release-v1.14:
       openShiftVersions:
-      - version: "4.15"
       - onDemand: true
-        version: "4.13"
+        version: "4.16"
+      - onDemand: true
+        version: "4.14"
     release-v1.15:
       konflux:
         enabled: true
       openShiftVersions:
-      - version: "4.17"
+      - useClusterPool: true
+        version: "4.18"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
     release-v1.16:
       konflux:
         enabled: true
@@ -19,8 +21,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
+        version: "4.19"
+      - useClusterPool: true
         version: "4.18"
-      - version: "4.17"
       - onDemand: true
         version: "4.14"
     release-v1.17:
@@ -30,8 +33,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
+        version: "4.19"
+      - useClusterPool: true
         version: "4.18"
-      - version: "4.17"
       - onDemand: true
         version: "4.14"
     release-v1.18:
