--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -7,14 +7,14 @@ config:
         - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.14:
       openShiftVersions:
-      - useClusterPool: true
+      - onDemand: true
         version: "4.16"
       - onDemand: true
         version: "4.13"
@@ -26,9 +26,9 @@ config:
         - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.16:
@@ -41,9 +41,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
@@ -58,9 +58,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
@@ -72,8 +72,12 @@ config:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.19"
       - useClusterPool: true
-        version: "4.17"
+        version: "4.18"
       - onDemand: true
         version: "4.14"
       skipDockerFilesMatches:
