update fbc policy for EC and stage push failure

--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-stage.yaml
@@ -16,7 +16,7 @@ spec:
     - serverless-operator-136-fbc-418
     - serverless-operator-136-fbc-419
   origin: ocp-serverless-tenant
-  policy: fbc-stage
+  policy: fbc-ocp-serverless-stage
   data:
     releaseNotes:
       product_id: [579]
