--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-prod.yaml
@@ -16,7 +16,7 @@ spec:
     - serverless-operator-136-fbc-418
     - serverless-operator-136-fbc-419
   origin: ocp-serverless-tenant
-  policy: fbc-standard
+  policy: fbc-ocp-serverless-prod
   data:
     releaseNotes:
       product_id: [579]
