--- a/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
@@ -6,3 +6,8 @@ spec:
   params:
     - name: build-image-index
       default: "false"
+  tasks:
+    - name: build-images
+      params:
+        - name: IMAGE_APPEND_PLATFORM
+          value: "false"
