Update bundle patch to not append arch to image name (#700)
* Revert "Update bundle patch to use output image from build-image-index task (#699)"

This reverts commit 44b302893b7cf71d842414b00f701a91761179c8.

* Update bundle patch to not append arch to image name

--- a/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
@@ -7,7 +7,7 @@ spec:
     - name: build-image-index
       default: "false"
   tasks:
-    - name: build-source-image
+    - name: build-images
       params:
-        - name: BINARY_IMAGE
-          value: $(tasks.build-image-index.results.IMAGE_URL)
+        - name: IMAGE_APPEND_PLATFORM
+          value: "false"
