upgrade to  OCP 4.19, use 4.20 as a candidate (#747)
* upgrade to OCP 4.19 by default, upgrade lp-interop to 4.20

* drop 4.18

* update to OCP 4.19 / 4.20 candidate

* typo

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -23,15 +23,16 @@ config:
         customConfigs:
           enabled: true
           includes:
-          - .*ocp4.19-lp-interop.*
+          - .*ocp4.20-lp-interop.*
         onDemand: true
-        version: "4.19"
+        version: "4.20"
       - customConfigs:
           enabled: true
           excludes:
-          - .*ocp4.19-lp-interop.*
+          - .*ocp4.20-lp-interop.*
+        onDemand: true
         useClusterPool: true
-        version: "4.18"
+        version: "4.19"
       - onDemand: true
         version: "4.14"
     release-1.35:
@@ -51,9 +52,10 @@ config:
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
-        version: "4.19"
+        version: "4.20"
       - useClusterPool: true
-        version: "4.18"
+        onDemand: true
+        version: "4.19"
       - onDemand: true
         version: "4.13"
       prowgen:
@@ -79,9 +81,9 @@ config:
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
-        version: "4.19"
+        version: "4.20"
       - useClusterPool: true
-        version: "4.18"
+        version: "4.19"
       - onDemand: true
         version: "4.14"
       prowgen:
@@ -107,16 +109,16 @@ config:
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
-        version: "4.19"
+        version: "4.20"
       - useClusterPool: true
-        version: "4.18"
+        version: "4.19"
       - onDemand: true
         version: "4.14"
       prowgen:
         disabled: true
 repositories:
 - customConfigs:
-  - name: 418-aws-ovn
+  - name: 419-aws-ovn
     releaseBuildConfiguration:
       tests:
       - as: e2e-aws-ovn-continuous
@@ -157,7 +159,7 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-azure
+  - name: 419-azure
     releaseBuildConfiguration:
       tests:
       - as: e2e-azure-continuous
@@ -198,7 +200,7 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-gcp
+  - name: 419-gcp
     releaseBuildConfiguration:
       tests:
       - as: e2e-gcp-continuous
@@ -239,22 +241,22 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-hypershift
+  - name: 419-hypershift
     releaseBuildConfiguration:
       base_images:
         hypershift-operator:
-          name: "4.18"
+          name: "4.19"
           namespace: ocp
           tag: hypershift-operator
         upi-installer:
-          name: "4.18"
+          name: "4.19"
           namespace: ocp
           tag: upi-installer
       releases:
         latest:
           integration:
             include_built_images: true
-            name: "4.18"
+            name: "4.19"
             namespace: ocp
       tests:
       - as: e2e-hypershift-continuous
@@ -300,7 +302,7 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-osd
+  - name: 419-osd
     releaseBuildConfiguration:
       base_images:
         cli-ocm:
@@ -314,7 +316,7 @@ repositories:
           cluster_profile: osd-ephemeral
           env:
             CLUSTER_DURATION: "10800"
-            CLUSTER_VERSION: "4.18"
+            CLUSTER_VERSION: "4.19"
             COMPUTE_NODES: "4"
           post:
           - chain: gather
@@ -346,7 +348,7 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-single-node
+  - name: 419-single-node
     releaseBuildConfiguration:
       tests:
       - as: e2e-sno-continuous
@@ -369,11 +371,11 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: 418-vsphere
+  - name: 419-vsphere
     releaseBuildConfiguration:
       base_images:
         upi-installer:
-          name: "4.18"
+          name: "4.19"
           namespace: ocp
           tag: upi-installer
       tests:
@@ -396,11 +398,11 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: ocp4.18-lp-rosa-classic
+  - name: ocp4.19-lp-rosa-classic
     releaseBuildConfiguration:
       base_images:
         cli:
-          name: "4.18"
+          name: "4.19"
           namespace: ocp
           tag: cli
         cli-ocm:
@@ -415,7 +417,7 @@ repositories:
         latest:
           integration:
             include_built_images: true
-            name: "4.18"
+            name: "4.19"
             namespace: ocp
       tests:
       - as: operator-e2e-rosa-aws
@@ -436,11 +438,11 @@ repositories:
                   ]
               }
             FIREWATCH_CONFIG_FILE_PATH: https://raw.githubusercontent.com/CSPI-QE/cspi-utils/main/firewatch-base-configs/rosa/lp-interop.json
-            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.18-lp","rosa-classic-lp","serverless-lp"]'
+            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.19-lp","rosa-classic-lp","serverless-lp"]'
             FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
             FIREWATCH_FAIL_WITH_TEST_FAILURES: "true"
             OCM_LOGIN_ENV: staging
-            OPENSHIFT_VERSION: "4.18"
+            OPENSHIFT_VERSION: "4.19"
           test:
           - ref: cucushift-installer-check-cluster-health
           - as: knative-eventing-kafka-broker-e2e
@@ -473,10 +475,10 @@ repositories:
         branch: ""
         org: ""
         repo: ""
-  - name: ocp4.19-lp-interop
+  - name: ocp4.20-lp-interop
     releaseBuildConfiguration:
       tests:
-      - as: operator-e2e-interop-aws-ocp419
+      - as: operator-e2e-interop-aws-ocp420
         cron: 0 23 31 2 *
         steps:
           cluster_profile: aws-cspi-qe
@@ -494,7 +496,7 @@ repositories:
                   ]
               }
             FIREWATCH_CONFIG_FILE_PATH: https://raw.githubusercontent.com/CSPI-QE/cspi-utils/main/firewatch-base-configs/aws-ipi/lp-interop.json
-            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.19-lp","self-managed-lp","serverless-lp"]'
+            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.20-lp","self-managed-lp","serverless-lp"]'
             FIREWATCH_DEFAULT_JIRA_ASSIGNEE: maschmid@redhat.com
             FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
             USER_TAGS: |
@@ -532,7 +534,7 @@ repositories:
                 memory: 200Mi
           workflow: firewatch-ipi-aws
         timeout: 8h0m0s
-      - as: operator-e2e-interop-aws-ocp419-fips
+      - as: operator-e2e-interop-aws-ocp420-fips
         cron: 0 23 31 2 *
         steps:
           cluster_profile: aws-cspi-qe
@@ -551,7 +553,7 @@ repositories:
                   ]
               }
             FIREWATCH_CONFIG_FILE_PATH: https://raw.githubusercontent.com/CSPI-QE/cspi-utils/main/firewatch-base-configs/aws-ipi/lp-interop.json
-            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.19-lp","self-managed-lp","serverless-lp","fips"]'
+            FIREWATCH_DEFAULT_JIRA_ADDITIONAL_LABELS: '["4.20-lp","self-managed-lp","serverless-lp","fips"]'
             FIREWATCH_DEFAULT_JIRA_ASSIGNEE: maschmid@redhat.com
             FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
             USER_TAGS: |
