Update Serving components owners file

--- a/config/client.yaml
+++ b/config/client.yaml
@@ -77,7 +77,9 @@ repositories:
       - Kaustubh-pande
       - rudyredhat1
     approvers:
+      - creydr
       - dsimansk
       - Kaustubh-pande
-      - creydr
+      - maschmid
+      - mvinkler
       - rudyredhat1
