--- a/config/serving-net-kourier.yaml
+++ b/config/serving-net-kourier.yaml
@@ -47,7 +47,10 @@ repositories:
       - Fedosin
       - mvinkler
     approvers:
+      - creydr
       - dsimansk
       - Fedosin
+      - Kaustubh-pande
+      - maschmid
       - mvinkler
       - rudyredhat1
