--- a/.konflux/releaseplanadmissions/serverless-operator-137-1370-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-137-1370-fbc-prod.yaml
@@ -17,7 +17,7 @@ spec:
     - serverless-operator-137-fbc-419
     - serverless-operator-137-fbc-420
   origin: ocp-serverless-tenant
-  policy: fbc-standard
+  policy: fbc-ocp-serverless-prod
   data:
     releaseNotes:
       product_id: [579]
