add Kaustubh-pande as Approver

--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -72,6 +72,7 @@ repositories:
     - matejvasek
     - gauron99
     - rudyredhat1
+    - Kaustubh-pande
     reviewers:
     - jrangelramos
   promotion:
