Allow config provided oc CLI image

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -6,6 +6,8 @@ config:
         excludes:
         - .*rosa.*
         imageOverrides:
+        - name: CLI_ARTIFACTS
+          pullSpec: registry.redhat.io/openshift4/ose-cli-artifacts-rhel9:v4.15
         - name: GO_BUILDER
           pullSpec: brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_golang_1.24
         - name: GO_RUNTIME
@@ -99,6 +101,8 @@ config:
         excludes:
         - .*rosa.*
         imageOverrides:
+        - name: CLI_ARTIFACTS
+          pullSpec: registry.redhat.io/openshift4/ose-cli-artifacts-rhel9:v4.15
         - name: GO_BUILDER
           pullSpec: brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_9_golang_1.23
         - name: GO_RUNTIME
