Remove periodic job for S-O 1.37 release

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -121,6 +121,7 @@ config:
         skipCron: true
         version: "4.20"
       - useClusterPool: true
+        skipCron: true
         version: "4.19"
       - onDemand: true
         skipCron: true
