--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -13,6 +13,7 @@ config:
       - perf-tests$
       - .*e2e-tls$
     release-v1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
       openShiftVersions:
