--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -8,6 +8,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
       openShiftVersions:
