--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -14,6 +14,7 @@ config:
       skipDockerFilesMatches:
       - .*hermetic.*
     release-v1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
         javaImages:
