--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -12,6 +12,7 @@ config:
         version: "4.14"
       promotion: {}
     release-v1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
       openShiftVersions:
