--- a/config/kn-plugin-event.yaml
+++ b/config/kn-plugin-event.yaml
@@ -1,6 +1,7 @@
 config:
   branches:
     release-1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
       openShiftVersions:
