--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -7,6 +7,7 @@ config:
         version: "4.19"
       promotion: {}
     release-v1.15:
+      golangVersion: "1.24"
       konflux:
         enabled: true
       openShiftVersions:
