--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -38,6 +38,7 @@ config:
         version: "4.14"
       promotion: {}
     release-1.35:
+      golangVersion: "1.24"
       konflux:
         enabled: true
         excludes:
