update RPA RP and R template according konflux team suggestion

--- a/pkg/konfluxgen/release.template.yaml
+++ b/pkg/konfluxgen/release.template.yaml
@@ -5,3 +5,8 @@ metadata:
 spec:
   snapshot: {{{ .Snapshot }}}
   releasePlan: {{{ .ReleasePlan }}}
+  data:
+    releaseNotes:
+      references:
+        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
+      type: "RHEA"
