--- a/pkg/konfluxgen/releaseplan.template.yaml
+++ b/pkg/konfluxgen/releaseplan.template.yaml
@@ -9,3 +9,17 @@ metadata:
 spec:
   application: {{{ truncate ( sanitize .ApplicationName ) }}}
   target: rhtap-releng-tenant
+  data:
+    releaseNotes:
+      solution: |
+        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
+        enables containers, microservices and functions to run "serverless".
+        Serverless applications can scale up and down (to zero) on demand and be triggered by a
+        number of event sources. OpenShift Serverless integrates with a number of
+        platform services, such as Monitoring and it is based on the open
+        source project Knative.
+      description: "The {{{ .SOVersion }}} release of Red Hat OpenShift Serverless Operator."
+      topic: |
+        The {{{ .SOVersion }}} GA release of Red Hat OpenShift Serverless Operator.
+        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
+      synopsis: "Red Hat OpenShift Serverless Release {{{ .SOVersion }}}"
