--- a/.konflux/releases/serverless-operator-137-fbc-414-1370-stage.yaml
+++ b/.konflux/releases/serverless-operator-137-fbc-414-1370-stage.yaml
@@ -1,7 +1,12 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Release
 metadata:
-  name: serverless-operator-137-fbc-414-1370-stage
+  name: serverless-operator-137-fbc-414-1370-stage-2
 spec:
-  snapshot: serverless-operator-137-fbc-414-override-snapshot-c558ca25
+  snapshot: serverless-operator-137-fbc-414-override-snapshot-9b146573
   releasePlan: serverless-operator-137-fbc-414-1370-stage
+  data:
+    releaseNotes:
+      references:
+        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
+      type: "RHEA"
